# ccxs

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc  README.md  main.c  pre-build.sh  test-binance-depth.json
.github/workflows/: main.yml
docker-build/: Dockerfile  README.adoc  pre-build.sh
src/: CMakeLists.txt  binance-depth.c  binance-depth.h  binance.c  binance.h  bitfinex.c  bitfinex.h  depth.c  depth.h  main.c
src/binance/: binance-depth.c  binance-depth.h  binance.c  binance.h
src/bitfinex/: bitfinex-depth.c  bitfinex-depth.h  bitfinex.c  bitfinex.h
src/bitstamp/: bitstamp-depth.c  bitstamp-depth.h  bitstamp.c  bitstamp.h
src/io/: c-json.c  c-json.h  strings.c  strings.h  time.c  time.h
src/kraken/: kraken-depth.c  kraken-depth.h  kraken.c  kraken.h
src/okex/: okex.c  okex.h
src/ws/: client-connect.c  client-connect.h  client-server-protocol.c  client-server-protocol.h  data.h
test/: CMakeLists.txt  file.c  file.h
test/binance/: test-binance-depth.c
test/bitfinex/: test-bitfinex-depth.c
test/bitstamp/: test-bitstamp-depth.c
test/kraken/: test-kraken-depth.c
test/resources/: bitfinex-info.json  bitstamp-subbed.json  bitstamp-update.json  kraken-heartbeat.json  kraken-info.json  kraken-snapshot.json  kraken-subbed.json  kraken-update.json  test-binance-depth.json  test-binance-depth20-100ms.json  test-bitfinex-snapshot.json  test-bitfinex-subbed.json  test-bitfinex-update.json
